<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.mastfrog</groupId>
    <artifactId>signature-hash</artifactId>
    <version>1.0-dev</version>
    <name>signature-hash</name>
    <url>http://github.com/timboudreau/signature-hash</url>
    <properties>
        <java.source.level>11</java.source.level>
        <mastfrog.version>2.5.1-dev</mastfrog.version>
        <junit.version>5.5.1</junit.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>com.mastfrog</groupId>
            <artifactId>util-streams</artifactId>
            <version>${mastfrog.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <!-- NetBeans 6.9+ requires JDK 6 -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <!-- If we use 3.x compiler each project will need individually specified
                annotationProcessorPaths including all modules whose annotations
                it consumes, or we'd need maven.compiler.force.javac=true, which brings
                build speed to a crawl.  This is something Maven has not gotten very right.
                -->
                <version>3.8.1</version>
                <configuration>
                    <showDeprecation>true</showDeprecation>
                    <showWarnings>true</showWarnings>
                    <debug>true</debug>
                    <encoding>UTF-8</encoding>
                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
                    <useIncrementalCompilation>false</useIncrementalCompilation>
                    <source>11</source>
                    <target>11</target>
                    <compilerArgs>
                        <arg>--add-exports</arg>
                        <arg>jdk.compiler/com.sun.tools.javac.api=javacs</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.compiler/com.sun.tools.javac.code=javacs</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.compiler/com.sun.tools.javac.comp=javacs</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.compiler/com.sun.tools.javac.main=javacs</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.compiler/com.sun.tools.javac.tree=javacs</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.compiler/com.sun.tools.javac.model=javacs</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.compiler/com.sun.tools.javac.util=javacs</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.1.1</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <additionalparam>-Xdoclint:none</additionalparam>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M3</version>
                <executions>
                    <execution>
                        <id>default-test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <configuration>
                            <forkMode>never</forkMode>
                            <parallel>none</parallel>
                            <trimStackTrace>false</trimStackTrace>
                            <useFile>false</useFile>
                            <systemPropertyVariables>
                                <unit.test>true</unit.test>
                                <acteur.debug>false</acteur.debug>
                                <forkNumber>${surefire.forkNumber}</forkNumber>
                                <system.exit.on.bind.failure>false</system.exit.on.bind.failure>
                            </systemPropertyVariables>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.mastfrog</groupId>
                <artifactId>maven-merge-configuration</artifactId>
                <version>${mastfrog.version}</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <id>compile</id>
                        <goals>
                            <goal>merge-configuration</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>com.mastfrog.sighash.SigTree</mainClass>
                    <jarName>sighash</jarName>
                    <skipMavenMetadata>true</skipMavenMetadata>
                    <normalizeMetaInfPropertiesFiles>true</normalizeMetaInfPropertiesFiles>
                    <skipLicenseFiles>true</skipLicenseFiles>
                    <exclude>
                        com.mastfrog.sighash.SigHashMojo.class
                        com.mastfrog.sighash.HelpMojo.class
                        com.mastfrog.giulius.annotation.processors
                        com.mastfrog.util.perf
                        com.google
                        about.html
                        plugin.xml
                        META-INF/NOTICE.txt
                        javax
                        licenses
                        org.codehaus
                        org.aopalliance
                        org.apache
                        org.eclipse
                        org.sonatype
                        beans.xsd
                        org.openide.xml
                        META-INF.plexus
                        META-INF.sisu
                        META-INF.maven
                        .netbeans_automatic_build
                    </exclude>
                </configuration>
            </plugin>            
        </plugins>
    </build>
    <repositories>
        <repository>
            <id>timboudreau-builds</id>
            <name>timboudreau.com builds</name>
            <url>https://timboudreau.com/maven/</url>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
            </snapshots>
        </repository>
    </repositories>
    <issueManagement>
        <system>Github</system>
        <url>https://github.com/timboudreau/signature-hash/issues</url>
    </issueManagement>
    <inceptionYear>2019</inceptionYear>
    <scm>
        <url>https://github.com/timboudreau/signature-hash.git</url>
        <connection>scm:git:https://github.com/timboudreau/signature-hash.git</connection>
        <developerConnection>git@github.com/timboudreau/signature-hash.git</developerConnection>
    </scm>
    <organization>
        <name>Mastfrog Technologies</name>
        <url>https://mastfrog.com</url>
    </organization>
    <licenses>
        <license>
            <name>MIT</name>
            <url>https://opensource.org/licenses/MIT</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <developers>
        <developer>
            <id>timboudreau</id>
            <name>Tim Boudreau</name>
            <email>tim@timboudreau.com</email>
            <url>https://timboudreau.com</url>
        </developer>
    </developers>    
</project>
